--- a/.gitignore
+++ b/.gitignore
@@ -5,57 +5,10 @@
 *.swp
 *.swo
 
+# Ignore the dynamic MkDocs site folder
+
+mkdocs-project/site/
+
 # Temporary Windows files
 ~$*
 
-# Products of compiling software (but need to be careful if library dependencies are included)
-*.o
-*.obj
-*.exe
-*.lib
-*.a
-*.so
-*.log
-
-# Lahey compiler dynamic files
-src/main/fortran/AMTEMP.BAT
-src/main/fortran/AMTEMP2.BAT
-*.DEP
-
-# Top-level bin folder and distribution folder
-/bin
-/dist
-
-# Ignore all StateMod binary and report output files
-# - these files are created by StateMod
-# - might to be a bit more nuanced if any of these files are needed in tests stored in this repository
-*.chk
-*.tmp
-fort.*
-*.b43
-*.b44
-*.b45
-*.b47
-*.b67
-*.b68
-*.xbe
-*.xbg
-*.xbi
-*.xbm
-*.xca
-*.xcb
-*.xcd
-*.xci
-*.xcw
-*.xdd
-*.xgn
-*.xir
-*.xop
-*.xou
-*.xpl
-*.xre
-*.xrh
-*.xri
-*.xss
-*.xtb
-*.xwr
